--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,23 +26,27 @@ jobs:
           - 22-3.1.2
           - 22-3.1.4
     steps:
+      # Checkout this repo
+      # https://github.com/actions/checkout
       -
         name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
       # Login against a Docker registry
       # https://github.com/docker/login-action
       -
         name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: rnters-bot
           password: ${{ secrets.GH_ACTIONS_PAT }}
+
       # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
       -
         name: Build and push ${{ matrix.ruby }}
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ${{ matrix.tags }}/.
           no-cache: true
