--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,14 +33,22 @@ jobs:
     steps:
       # Checkout this repo
       # https://github.com/actions/checkout
-      -
-        name: Checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v4
+
+      # Add support for more platforms with QEMU (optional)
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      # Set up Docker Buildx
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       # Login against a Docker registry
       # https://github.com/docker/login-action
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -49,11 +57,11 @@ jobs:
 
       # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
-      -
-        name: Build and push ${{ matrix.ruby }}
-        uses: docker/build-push-action@v5
+      - name: Build and push ${{ matrix.ruby }}
+        uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.tags }}/.
           no-cache: true
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ghcr.io/flecto-io/heroku-rails:${{ matrix.tags }}
